test upload deploy pack
